crates/no_expect_outside_tests/ui/fail_expect_with_cfg_attr.stderr
error: Avoid calling expect on `std::option::Option<i32>` outside test-only code.
  --> $DIR/fail_expect_with_cfg_attr.rs:6:13
   |
LL |     let _ = value.expect("handler should not ignore errors");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: The call originates within function `handler` which is not recognised as a test.
   = help: Handle the `None` variant of `std::option::Option<i32>` or move the code into a test.
note: the lint level is defined here
  --> $DIR/fail_expect_with_cfg_attr.rs:1:9
   |
LL | #![deny(no_expect_outside_tests)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

